<resources>
    <string name="app_name">CampusExpenseManager</string>
    <string name="login">LOGIN</string>
    <string name="enter_id">Enter ID</string>
    <string name="username">Username</string>
    <string name="ok">OK</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone">phone</string>
    <string name="Phone" />
    <string name="cancel" />
    <string name="welcome_constraint_layout">Welcome Constraint Layout</string>
    <string name="it0602">it0602</string>
    <string name="account">Account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="welcome_table_row">welcome_table_row</string>
    <string name="start_activity">start_activity</string>
    <string name="first_activity_running">first_activity_running</string>
    <string name="second_activity_running">Second activity running</string>
    <string name="_20_age">20 age</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="dong_y_voi_cac_dieu_khoan">Dong y voi cac dieu khoan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home page</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="welcome_back_to_expense_manager">Welcome back to Expense Manager</string>
    <string name="welcome_to_expense_manager">Welcome to Expense Manager</string>
    <string name="welcome">Welcome</string>
    <string name="campus_expense">Campus Expense</string>
    <string name="manager">Manager</string>
    <string name="the_easiest_way_to_manage_finance">The easiest way to manage finance</string>
    <string name="register">Register</string>
    <string name="Login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login_to_n_your_account">Login to\n your account</string>
    <string name="your_email">Your Email</string>
    <string name="youremail">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_name">Your name</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="your_namez">Your Name</string>
    <string name="your_password">Your Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="creat_naccount">Creat\nAccount</string>
    <string name="exit">Exit</string>
    <string name="this_month_budget">This Month Budget</string>
    <string name="remaining_budget">Remaining Budget</string>
    <string name="this_month_budget_">This month budget:</string>
    <string name="remaining_budget_">Remaining budget:</string>
    <string name="your_budget">Your Budget</string>
    <string name="most_spending">Most Spending</string>
    <string name="recently_transaction">Recently Transaction</string>
    <string name="Return">Return</string>
    <string name="create_an_expense">Create an Expense</string>
    <string name="total">Total</string>
    <string name="save">Save</string>
    <string name="add_new_budget">Add New Budget</string>
    <string name="edit_an_expense">Edit an expense</string>
    <string name="create_an_expense1">Create an expense</string>
    <string name="edit_budget">Edit budget</string>
    <string name="edit_an_expense1">Edit an expense</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="total_spent">Total Spent:</string>
    <string name="total_budget">Total Budget:</string>
    <string name="remaining_budget1">Remaining Budget:</string>
    <string name="query">Query</string>
    <string name="show_your_password">Show your password</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="create">Create</string>
    <string name="expense_overview">Expense Overview</string>
    <string name="phone1">Phone</string>
    <string name="log_out">Log Out</string>
    <string name="total_budget1">Total Budget</string>
    <string name="details">Details</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="edit1">Edit</string>
</resources>