<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151515">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="32dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/layers_color"
                    tools:layout_editor_absoluteX="18dp"
                    tools:layout_editor_absoluteY="18dp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creat_naccount"
                    android:textColor="#ffffff"
                    android:textSize="33sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/gradient_background"
                android:layout_margin="20dp"
                android:padding="30dp">

                <TextView
                    android:id="@+id/txtRegisterYourName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_name"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/edtRegisterYourName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:hint="@string/enter_your_name"
                    android:textColorHint="#7C7878"
                    android:background="@drawable/edittext_background"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/txtRegisterYourEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_email"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="16dp"/>
                <EditText
                    android:id="@+id/edtRegisterYourEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:hint="@string/enter_your_email"
                    android:textColorHint="#7C7878"
                    android:background="@drawable/edittext_background"
                    android:padding="8dp"
                    tools:ignore="TextFields" />

                <TextView
                    android:id="@+id/txtRegisterYourPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_phone_number"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="16dp"/>
                <EditText
                    android:id="@+id/edtRegisterYourPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"

                    android:hint="@string/enter_your_phone_number"
                    android:textColor="@color/white"
                    android:textColorHint="#7C7878"
                    android:background="@drawable/edittext_background"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    tools:ignore="TextFields" />

                <TextView
                    android:id="@+id/txtRegisterYourPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_password"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="16dp"/>
                <EditText
                    android:id="@+id/edtRegisterYourPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/enter_your_password"
                    android:textColor="@color/white"
                    android:textColorHint="#7C7878"
                    android:background="@drawable/edittext_background"
                    android:padding="8dp"
                    tools:ignore="TextFields" />

                <CheckBox
                    android:id="@+id/cbShowPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_your_password"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegisterToDashBoard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/logintodashboardbutton_background"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnExitFromRegister"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/exit"
                android:background="@drawable/logintodashboardbutton_background"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>