<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151515">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-30dp"
        tools:layout_editor_absoluteY="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtLoginStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/login_to_n_your_account"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="32dp"
                android:background="@drawable/gradient_background">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/circle"
                        tools:layout_editor_absoluteY="0dp" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                        app:layout_constraintEnd_toEndOf="@+id/imageView7"
                        app:layout_constraintStart_toStartOf="@+id/imageView7"
                        app:layout_constraintTop_toTopOf="@+id/imageView7"
                        app:srcCompat="@drawable/layers_2" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/txtStarEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_email"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_marginStart="32dp"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtStartEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginEnd="32dp"
                    android:padding="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    tools:ignore="TextFields"
                    android:hint="@string/enter_your_email"
                    android:textColorHint="#7C7878"
                    android:textColor="#ffffff"
                    android:background="@drawable/edittext_background"/>

                <TextView
                    android:id="@+id/txtStartPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_password"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_marginStart="32dp"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/edtStartPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="32dp"
                    android:padding="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    tools:ignore="TextFields"
                    android:hint="@string/enter_your_password"
                    android:textColorHint="#7C7878"
                    android:textColor="#ffffff"
                    android:background="@drawable/edittext_background"/>



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLoginToDashboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/Login"
                    android:background="@drawable/logintodashboardbutton_background"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnExitFromLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/exit"
                    android:background="@drawable/logintodashboardbutton_background"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>