<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#212121"
    android:textColor="#FFFFFF">

    <!-- Top Section -->

    <!-- Mid-Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <Button
            android:id="@+id/btnReturnFromExpenseOverview"
            android:backgroundTint="#424242"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Return"
            app:layout_constraintEnd_toStartOf="@+id/title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:text="@string/expense_overview"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/mid_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvRemainingBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/remaining_budget1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTotalBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/total_budget"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="116dp">

            <Button
                android:id="@+id/btnEditExpense"
                android:layout_width="173dp"
                android:layout_height="46dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="#424242"
                android:text="@string/edit"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnCreateExpense"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="#424242"
                android:text="@string/create"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/btnEditExpense"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Expense Name"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>
            <!-- Expense Budget Input -->
            <EditText
                android:id="@+id/etBudget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Budget Amount"
                android:textColorHint="@color/white"
                android:inputType="numberDecimal"
                android:textColor="@color/white"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </ScrollView>

    <!-- Bottom Section -->


</LinearLayout>